Bug 85806 - Hebrew and Arabic Is Not Working On MAC
Summary: Hebrew and Arabic Is Not Working On MAC
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha1
Hardware: Other macOS (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta2
Keywords: regression
Depends on:
Blocks: RTL mab4.4
  Show dependency treegraph
 
Reported: 2014-11-03 14:52 UTC by Gal Bar-Nissan
Modified: 2024-08-03 09:15 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gal Bar-Nissan 2014-11-03 14:52:58 UTC
First of all, Hebrew is reversed. 
Second, When writing Hebrew words and then enter spaces the words gets distorted.  

To reproduce:
***************

Switch to RTL and Hebrew keyboard. 

1. bug - reversed order:
write some words in hebrew. 

Expected:
The words are written RTL - letter after letter. 

Actual:
the words written in reverse. All letters are added on the right. 

2. bug - distortion when adding spaces or other words (This is already happening on 3.2. )
Write 2 words in Hebrew and then add spaces

Expected:
the first words remains the same and spaces are added to its left.

Actual:
The words get distorted. 

The above bugs happens only on MAC. 
Every time (Fully reproducible). 
All of the above apply also to Arabic. 

The commit I built was  1071eccd037390774b6d3f1aade9af02fd2cbe54
(But, as I said the second bug happens even on the 3.2 version).
Comment 1 Gal Bar-Nissan 2014-11-03 20:07:40 UTC
Small fix - none of the problems happens on the prior versions just on the master.
Comment 2 Alex Thurgood 2014-11-10 15:16:33 UTC
Confirming that RTL doesn't work on master 

Version: 4.4.0.0.alpha2+
Build ID: c1358e5dc875bb923f4b5472ba615ebd19f0d057

tried Hebrew and Arabic
Comment 3 Alex Thurgood 2014-11-10 15:21:22 UTC
Arabic seems to work OK in LO 4322 - regression
Comment 4 Michael Stahl 2014-11-10 22:32:05 UTC
if this bug is only happening on Mac and not Win/Linux then probably it's a bug in VCL, not Writer.
Comment 5 How can I remove my account? 2014-11-11 06:24:36 UTC
CloudOn says they have a fix for this but they have been too busy to submit it.
Comment 6 Gal Bar-Nissan 2014-11-13 08:18:50 UTC
Yes. Found the bug. It's in the ctlayout.cxx. Will be soon submitted (sorry. no free time lately :)
Comment 7 Björn Michaelsen 2014-11-28 09:42:14 UTC
(This is an automated message.)

LibreOffice development currently prioritizes bugs with the so called MAB (most annoying bugs) -- as this bug has not run through that process (including writing a short rationale for this bug being a candidate and other who are watching the tracker bug silently approving that rationale etc.) its priority is set to high. Note this is effectively no change in the urgency assigned to this bug, as we are currently not making a difference between high and highest and severity is untouched.

You can find out more about MABs and how the process works by contacting libreoffice qa on irc:

 http://webchat.freenode.net/?channels=libreoffice-qa

The QA wiki page also gives you hints on how to get in contact with the team (if IRC fails you, your next best choice is the mailing list):

 https://wiki.documentfoundation.org/QA
Comment 8 How can I remove my account? 2014-11-28 10:07:51 UTC
Gal Bar-Nissan, any news...? Would be nice to get this fixed in 4.4.
Comment 9 Joel Madero 2014-12-02 02:22:16 UTC
Please read this message in its entirety and do not revert change.

This is simply an update to the priority/severity of the bug. Blockers are reserved for incredibly rare cases which this bug does not meet. We use an objective standard of what is or is not a blocker and this does not count as a blocker.

Setting priority:
Critical - major loss of functionality
Highest - adding to MAB because of this functionality loss plus regression.


Again please do NOT change the severity back as it does not help at all in pushing the bug forward and instead only confuses our objective standards - leading to developers not trusting the system. Setting to blocker will have zero impact towards moving the bug forward.

Thanks for your understanding.
Comment 10 Gal Bar-Nissan 2014-12-03 09:58:20 UTC
pushed a fixing patch:
https://gerrit.libreoffice.org/#/c/13288/
Comment 11 Commit Notification 2014-12-03 13:10:42 UTC
galbarnissan committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=00fda95ae461120d515d7cbdcadf8834b6ff12fe

fdo#85806: Hebrew and Arabic is not working on MAC

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-12-03 13:53:00 UTC
galbarnissan committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2f95a5f5b1564cc115f007403869741608ae2c01&h=libreoffice-4-4

fdo#85806: Hebrew and Arabic is not working on MAC

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Adolfo Jayme Barrientos 2014-12-04 13:38:32 UTC
Assuming that the above commits are the complete fix for this, I’m closing this report.